--- a/src/app/analize-quina/analize-quina.page.scss
+++ b/src/app/analize-quina/analize-quina.page.scss
@@ -121,7 +121,7 @@ progress-bar {
   padding-top: 10px
 }
 .sc-ion-buttons-md-h {
-  margin-top: -49px;
+  margin-top: -30px;
 }
 h5 {
   color: black;
@@ -133,9 +133,10 @@ h5 {
 }
 
 #frase {
-  padding-top: 20px;
-  padding-inline-start: 20px;
-  color: black;
+  padding-top: 15px;
+  text-align: center;
+  color: white;
+  font-size: 20px;
 }
 #aposta {
   padding-left: 3px;
