--- a/src/app/dezenas-megasena/dezenas-megasena.page.html
+++ b/src/app/dezenas-megasena/dezenas-megasena.page.html
@@ -6,13 +6,13 @@
     <ion-title>
       MEGA-SENA
     </ion-title>
-    <div id="frase">"SIGA SEUS SONHOS E IDEAIS E LUTE ENQUANTO A SORTE FAZ SEU TRABALHO"</div>
+    <div id="frase">"EU ESTOU DE POSSE DO BILHETE PREMIADO"</div>
   </ion-toolbar>
 </ion-header>
 
 <ion-content padding>
   
-  <ion-card>
+  <ion-card *ngIf="fechamento12x6">
     <ion-card-header>
       <ion-card-subtitle>MEGA-SENA</ion-card-subtitle>
       <ion-card-title>Fechamento 12-6</ion-card-title>
@@ -23,6 +23,72 @@
       vai gerar 6 apostas fechadas e coferirar se houve premiações naquela aposta.
     </ion-card-content>
   </ion-card>
+
+  <ion-card *ngIf="fechamento18x3x9">
+    <ion-card-header>
+      <ion-card-subtitle>MEGA-SENA</ion-card-subtitle>
+      <ion-card-title>Fechamento 18-9</ion-card-title>
+    </ion-card-header>
+
+    <ion-card-content>
+      Escolha 18 dezenas e click no botão GERAR COMBINAÇÕES o aplicativo
+      vai gerar 9 apostas fechadas e coferirar se houve premiações naquela aposta.
+    </ion-card-content>
+  </ion-card>
+
+  <ion-card *ngIf="fechamento12x3x17">
+    <ion-card-header>
+      <ion-card-subtitle>MEGA-SENA</ion-card-subtitle>
+      <ion-card-title>Fechamento 12-17</ion-card-title>
+    </ion-card-header>
+
+    <ion-card-content>
+      Escolha 12 dezenas e click no botão GERAR COMBINAÇÕES o aplicativo
+      vai gerar 17 apostas fechadas e coferirar se houve premiações naquela aposta.
+    </ion-card-content>
+  </ion-card>
+
+  <ion-card *ngIf="fechamento9x12">
+    <ion-card-header>
+      <ion-card-subtitle>MEGA-SENA</ion-card-subtitle>
+      <ion-card-title>Fechamento 9-12</ion-card-title>
+    </ion-card-header>
+
+    <ion-card-content>
+      Escolha 9 dezenas e click no botão GERAR COMBINAÇÕES o aplicativo
+      vai gerar 12 apostas fechadas e coferirar se houve premiações naquela aposta.
+      Acertando 4 das 9 dezenas garantido Quadra com mais possibilidades de premios maiores.
+    </ion-card-content>
+  </ion-card>
+
+  <ion-card *ngIf="fechamento8x7">
+    <ion-card-header>
+      <ion-card-subtitle>MEGA-SENA</ion-card-subtitle>
+      <ion-card-title>Fechamento 8-7</ion-card-title>
+    </ion-card-header>
+
+    <ion-card-content>
+      Escolha 8 dezenas e click no botão GERAR COMBINAÇÕES o aplicativo
+      vai gerar 7 apostas fechadas e coferirar se houve premiações naquela aposta.
+      100% Quadra acertando 4 dezenas
+      100% Quina acertando 6 dezenas
+    </ion-card-content>
+  </ion-card>
+
+  <ion-card *ngIf="fechamento10x3">
+    <ion-card-header>
+      <ion-card-subtitle>MEGA-SENA</ion-card-subtitle>
+      <ion-card-title>Fechamento 10-3</ion-card-title>
+    </ion-card-header>
+
+    <ion-card-content>
+      Escolha 10 dezenas e click no botão GERAR COMBINAÇÕES o aplicativo
+      vai gerar 3 apostas fechadas e coferirar se houve premiações naquela aposta.
+      Acertando 6 dezenas das 10 que voê selecionou garantirá 100% Quadra com possibilidades
+      de fazer a Sena
+    </ion-card-content>
+  </ion-card>
+
   <ion-grid>
     <ion-row>
       <ion-col size="12">
@@ -240,7 +306,7 @@
   <ion-button *ngIf="fechamento10x3" size="large" color="primary" (click)="callServiceFechamento10x3()">Gerar Combinações</ion-button>
   <ion-button *ngIf="verificador" size="large" color="primary" (click)="verificarDezenas()">Verificar Aposta</ion-button>
 
-  <ion-grid *ngIf="apostas.length > 0">
+  <!--<ion-grid *ngIf="apostas.length > 0">
     <ion-row >
       <ion-col size="12">
         
@@ -275,6 +341,6 @@
         
       </ion-col>
     </ion-row>
-  </ion-grid>
+  </ion-grid>-->
   
 </ion-content>
