--- a/src/app/dezenas-megasena/dezenas-megasena.page.scss
+++ b/src/app/dezenas-megasena/dezenas-megasena.page.scss
@@ -126,7 +126,7 @@ h5 {
   padding-top: 10px;
 }
 .sc-ion-buttons-md-h {
-  margin-top: -49px;
+  margin-top: -25px;
 }
 #dezenas-corrente {
   align-items: center;
@@ -138,9 +138,9 @@ h5 {
   padding-inline-start: 35px;
 }
 #frase {
-  padding-top: 20px;
+  padding-top: 15px;
   text-align: center;
-  color: black;
+  color: white;
 }
 
 #aposta {
