--- a/src/app/dezenas-quina/dezenas-quina.page.scss
+++ b/src/app/dezenas-quina/dezenas-quina.page.scss
@@ -1,24 +1,28 @@
 .arredondar {
-    display: inline-block;
-    background-color: #633ce0;
-    padding: 12px;
-    font-size: 14; /*remove "white spaces"*/
-    color:#fff;
-    font-weight: bold;
+  display: inline-block;
+  background-color: #633ce0;
+  padding: 12px;
+  font-size: 14; /*remove "white spaces"*/
+  color:#fff;
+  font-weight: bold;
 }
 .arredondar, .arredondar img {
-    -webkit-clip-path: circle(50% at 50% 50%);
-            clip-path: circle(50% at 50% 50%);
+  -webkit-clip-path: circle(50% at 50% 50%);
+  clip-path: circle(50% at 50% 50%);
 }
 
 .trapezio { 
-    display: inline-block;
-    background: cornsilk;
-    border: 1px solid #fff;
-    font-size: 13px;
-    height: 17px; 
-    width: 33px; 
-    font-weight: bold;
+  display: inline-block;
+  background: cornsilk;
+  border: 1px solid #fff;
+  font-size: 13px;
+  height: 17px; 
+  width: 33px; 
+  font-weight: bold;
+}
+span {
+  font-family: 'Courier New', Courier, monospace;
+  padding-left: 50%;
 }
 #arr {
   text-align: center;
@@ -30,7 +34,7 @@
   flex-wrap: wrap;
   justify-content: center;
   position: absolute;
-  padding-inline-start: 0px;
+  
 }
 #n_sorteio {
   align-items: center;
@@ -122,9 +126,10 @@ h5 {
 }
 
 #frase {
-  padding-top: 20px;
-  padding-inline-start: 20px;
-  color: black;
+  padding-top: 6px;
+  text-align: center;
+  color: white;
+  font-size: 16px;
 }
 
 #aposta {
@@ -140,12 +145,13 @@ h5 {
 
 ul {
     list-style-type: none;
-    padding-inline-start: 10px;
+    padding-inline-start: 0px;
     padding-inline-end: 0px;
   }
   
   li {
     display: inline-block;
+    padding: 1px;
   }
   
   input[type="checkbox"][id^="cb"] {
