--- a/src/app/image-modal/image-modal.page.scss
+++ b/src/app/image-modal/image-modal.page.scss
@@ -1,12 +1,10 @@
-ion-header {
-    height: 100px;
-  }
+
 ion-toolbar {
-    --background: url('../../assets/lotomania/olho-quantico.jpg') no-repeat center center / cover;
-    -webkit-background-size: cover;
+    //--background: url('../../assets/lotomania/olho-quantico.jpg') no-repeat center center / cover;
+    //-webkit-background-size: cover;
     color: white;
     font-family: fantasy;
-    height: 100px;
+    //height: 100px;
     
   }
 
