--- a/src/app/lotofacil/lotofacil.page.html
+++ b/src/app/lotofacil/lotofacil.page.html
@@ -6,7 +6,7 @@
     <ion-title>
       LOTOFACIL
     </ion-title>
-    <h6>"A perseverança é a mãe da boa sorte."</h6>
+    <div id="frase">"TUDO O QUE SOMOS É RESULTADO DO QUE PENSAMOS" <span>-Buda</span></div>
   </ion-toolbar>
 </ion-header>
 
