--- a/src/app/mega-sena/mega-sena.page.scss
+++ b/src/app/mega-sena/mega-sena.page.scss
@@ -43,8 +43,10 @@ ion-card {
   padding-bottom: 9px;
 }
 .title-md {
-  padding-inline-start: 0px;
-  padding-top: 3px;
+  padding-top: 10px
+}
+.sc-ion-buttons-md-h {
+  margin-top: -49px;
 }
 #valor {
   color: crimson;
@@ -71,8 +73,8 @@ ion-card {
 }
 
 #frase {
-  padding-top: 25px;
+  padding-top: 15px;
   text-align: center;
-  color: black;
+  color: white;
 }
   
