--- a/src/app/palpite-lotofacil/palpite-lotofacil.page.html
+++ b/src/app/palpite-lotofacil/palpite-lotofacil.page.html
@@ -48,7 +48,7 @@
                         </tr>
                         <tr>
                           <td id="quadra">12 pontos</td>
-                          <td id="quadra">{{aposta.deze}}</td>
+                          <td id="quadra">{{aposta.doze}}</td>
                         </tr>
                         <tr>
                           <td id="quadra">11 pontos</td>
