--- a/src/app/palpite-lotofacil/palpite-lotofacil.page.scss
+++ b/src/app/palpite-lotofacil/palpite-lotofacil.page.scss
@@ -38,7 +38,7 @@
     height: 100px;
   }
   ion-toolbar {
-    --background: linear-gradient(#f843956b, #f956a078), url('../../assets/lotomania/sorte-combo.jpg') no-repeat center center / cover;
+    --background: linear-gradient( rgba(249,86,160,0.6), rgba(249,86,160,0.6)), url('../../assets/lotomania/sorte-combo.jpg') no-repeat center center / cover;
     -webkit-background-size: cover;
     color: white;
     font-family: fantasy;  
