--- a/src/app/palpite-quina/palpite-quina.page.html
+++ b/src/app/palpite-quina/palpite-quina.page.html
@@ -6,7 +6,7 @@
     <ion-title>
       PALPITE DA SORTE
     </ion-title>
-    <div id="frase">"Siga seus sonhos e ideais e lute enquanto a sorte faz o seu trabalho."</div>
+    <div id="frase">"A SORTE FAVORECE A MENTE BEM PREPARADA"</div>
   </ion-toolbar>
 </ion-header>
 
