--- a/src/app/quina/quina.page.html
+++ b/src/app/quina/quina.page.html
@@ -6,7 +6,8 @@
     <ion-title>
       QUINA
     </ion-title>
-    <div id="frase">"Siga seus sonhos e ideais e lute enquanto a sorte faz o seu trabalho."</div>
+    <div id="frase">"UM HOMEM É APENAS O PRODUTO DOS SEUS PENSAMENTOS. O QUE ELE ACHA QUE SE TORNA" </div>
+    <span> - Gandhi</span>
   </ion-toolbar>
 </ion-header>
 
@@ -25,7 +26,7 @@
   <ion-grid>
     <ion-row>
       <ion-col>
-        <ion-card (click)="fechamento_18x12x5x6()">
+        <ion-card (click)="fechamento_10x19()">
           <div id="dezena">10 dezenas</div>
           <div id="fixas">100% terno</div>
           <div id="fixas">SE 3 acertos</div>
@@ -36,7 +37,7 @@
         </ion-card>
       </ion-col>
       <ion-col>
-        <ion-card (click)="fechamento_10x19()">
+        <ion-card (click)="fechamento_18x12x5x6()">
           <div id="dezena">18 dezenas</div>
           <div id="fixas">100% terno</div>
           <div id="fixas">SE 5 acertos</div>
@@ -49,7 +50,7 @@
 
     <ion-row>
       <ion-col>
-        <ion-card (click)="fechamento_18x12x5x6()">
+        <ion-card (click)="fechamento_8x8()">
           <div id="dezena">8 dezenas</div>
           <div id="fixas">100% terno</div>
           <div id="fixas">SE 3 acertos</div>
@@ -59,7 +60,7 @@
         </ion-card>
       </ion-col>
       <ion-col>
-        <ion-card (click)="fechamento_10x19()">
+        <ion-card (click)="fechamento_10x2()">
           <div id="dezena">10 dezenas</div>
           <div id="fixas">100% terno</div>
           <div id="fixas">SE 5 acertos</div>
