--- a/src/app/verificador/verificador.page.html
+++ b/src/app/verificador/verificador.page.html
@@ -6,7 +6,7 @@
     <ion-title>
       ANALIZAR APOSTA
     </ion-title>
-    <div id="frase">"Siga seus sonhos e ideais e lute enquanto a sorte faz o seu trabalho."</div>
+    <div id="frase">"O MELHOR AMULETO DA SORTE É A FÉ"</div>
   </ion-toolbar>
 </ion-header>
 
