--- a/src/app/analize-lotofacil/analize-lotofacil.page.html
+++ b/src/app/analize-lotofacil/analize-lotofacil.page.html
@@ -11,6 +11,7 @@
      <ion-icon size="large" color="danger" name="notifications"></ion-icon>
     </ion-buttons>
     -->
+    <div id="frase">"Creio muito na sorte. Quanto mais trabalho, mais sorte pareço ter."</div>
   </ion-toolbar>
 </ion-header>
 
@@ -117,7 +118,8 @@
       <label for="cb25"><div class="trapezio" >[ 25 ]</div></label>
     </li>
   </ul>
-  <ion-button  size="large" color="primary" (click)="verificarDezenas()">Analizar Aposta</ion-button>
+  <ion-button  size="large" color="primary" (click)="verificarDezenas2()">Analizar Aposta</ion-button>
+  <!--
   <ion-grid>
     <ion-row>
       <ion-col size="12">
@@ -157,4 +159,5 @@
       </ion-col>
     </ion-row>
   </ion-grid>
+  -->
 </ion-content>
