--- a/src/app/analize-quina/analize-quina.page.html
+++ b/src/app/analize-quina/analize-quina.page.html
@@ -6,7 +6,7 @@
     <ion-title>
       ANALIZAR APOSTA
     </ion-title>
-    <div id="frase">"Siga seus sonhos e ideais e lute enquanto a sorte faz o seu trabalho."</div>
+    <div id="frase">"O MELHOR AMULETO DA SORTE É A FÉ"</div>
   </ion-toolbar>
 </ion-header>
 
@@ -268,12 +268,12 @@
     </li>
   </ul>
 
-  <ion-button size="large" color="primary" (click)="verificarDezenas()">VERIFICAR</ion-button>
+  <ion-button size="large" color="primary" (click)="verificarDezenas2()">VERIFICAR</ion-button>
 
-  <ion-grid *ngIf="apostas.length > 0">
+  <!--<ion-grid *ngIf="apostas.length > 0">
     <ion-row>
       <ion-col size="12">
-          <ion-card class="contador"  *ngFor="let aposta of apostas; index as i">
+          <ion-card class="contador"  *ngFor="let aposta of apostas">
             <div id="aposta">
               <div id="aposta-label">
                 <h5>{{aposta.num_usuario}}</h5>
@@ -303,5 +303,34 @@
         
       </ion-col>
     </ion-row>
-  </ion-grid>
+  </ion-grid>-->
+  <!--
+  <ion-card #verificar *ngIf="verificar" class="contador" >
+            <div id="aposta">
+              <div id="aposta-label">
+                <h5>{{verificar.num_usuario}}</h5>
+                <table>
+                  <tr>
+                    <th id="table-header">Premio</th>
+                    <th id="table-header">Quantidade</th>
+                  </tr>
+                  <tr>
+                    <td id="sena">Quina</td>
+                    <td id="sena">{{verificar.quina}}</td>
+                  </tr>
+                  <tr>
+                    <td id="quina">Quadra</td>
+                    <td id="quina"></td>
+                  </tr>
+                  <tr>
+                    <td id="quadra">Terno</td>
+                    <td id="quadra"></td>
+                  </tr>
+                </table>
+              </div> 
+        
+            </div>
+          </ion-card>
+  -->
+
 </ion-content>
