--- a/src/app/dezenas-quina/dezenas-quina.page.html
+++ b/src/app/dezenas-quina/dezenas-quina.page.html
@@ -6,32 +6,77 @@
     <ion-title>
       QUINA
     </ion-title>
-    <div id="frase">"Siga seus sonhos e ideais e lute enquanto a sorte faz o seu trabalho."</div>
+    <div id="frase">"UM HOMEM É APENAS O PRODUTO DOS SEUS PENSAMENTOS. O QUE ELE ACHA QUE SE TORNA" </div>
+    <span> - Gandhi</span>
   </ion-toolbar>
 </ion-header>
 
 <ion-content padding>
 
-  <ion-card>
+  <ion-card *ngIf="fechamento_18x12x5x6">
     <ion-card-header>
       <ion-card-subtitle>QUINA</ion-card-subtitle>
-      <ion-card-title>Fechamento 12-6</ion-card-title>
+      <ion-card-title>Fechamento 18-12</ion-card-title>
     </ion-card-header>
 
     <ion-card-content>
-      Escolha 12 dezenas e click no botão GERAR COMBINAÇÕES o aplicativo
-      vai gerar 6 apostas fechadas e coferirar se houve premiações naquela aposta.
+      Escolha 18 dezenas e click no botão GERAR COMBINAÇÕES o aplicativo
+      vai gerar 12 apostas fechadas de 6 dezenas e vai conferir se já houve premiações naquela aposta.
+      Acertando 5 dezenas garantido no minimo Terno com possibiliades de premios maiores.
     </ion-card-content>
   </ion-card>
 
-  <div id="n_sorteio">sorteio Nº 1999</div>
-  <div id="arr">
-    <div class="arredondar" value="01">01</div>
-    <div class="arredondar" value="01">02</div>
-    <div class="arredondar" value="01">03</div>
-    <div class="arredondar" value="01">04</div>
-    <div class="arredondar" value="01">05</div>
-  </div>
+  <ion-card *ngIf="fechamento_10x19">
+    <ion-card-header>
+      <ion-card-subtitle>QUINA</ion-card-subtitle>
+      <ion-card-title>Fechamento 10-19</ion-card-title>
+    </ion-card-header>
+
+    <ion-card-content>
+      Escolha 10 dezenas e click no botão GERAR COMBINAÇÕES o aplicativo
+      vai gerar 19 apostas fechadas e vai conferir se já houve premiações naquela aposta.
+      100% Terno se acertar 3 dezenas. Com possibiliades de premios maiores.
+    </ion-card-content>
+  </ion-card>
+
+  <ion-card *ngIf="fechamento_8x8">
+    <ion-card-header>
+      <ion-card-subtitle>QUINA</ion-card-subtitle>
+      <ion-card-title>Fechamento 8-8</ion-card-title>
+    </ion-card-header>
+
+    <ion-card-content>
+      Escolha 8 dezenas e click no botão GERAR COMBINAÇÕES o aplicativo
+      vai gerar 8 apostas fechadas e vai conferir se já houve premiações naquela aposta.
+      100% Quadra e no minimo 1 Terno SE acertar 4 dezenas
+    </ion-card-content>
+  </ion-card>
+
+  <ion-card *ngIf="fechamento_10x2">
+    <ion-card-header>
+      <ion-card-subtitle>QUINA</ion-card-subtitle>
+      <ion-card-title>Fechamento 10-2</ion-card-title>
+    </ion-card-header>
+
+    <ion-card-content>
+      Escolha 8 dezenas e click no botão GERAR COMBINAÇÕES o aplicativo
+      vai gerar 8 apostas fechadas e vai conferir se já houve premiações naquela aposta.
+      100% Terno SE acertar 5 dezenas. Com possibilidades de premios maiores.
+    </ion-card-content>
+  </ion-card>
+
+  <ion-grid>
+    <ion-row>
+      <ion-col size="12">
+        <div id="n_sorteio">sorteio Nº {{sorteio_corrente}}</div>
+        <div id="n_sorteio">
+          <div *ngFor="let dezenas of dezenas_corrente">
+            <div class="arredondar">{{dezenas}}</div>
+          </div>
+        </div>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
 
   <ion-grid>
     <ion-row>
@@ -293,41 +338,5 @@
   <ion-button *ngIf="fechamento_8x8" size="large" color="primary" (click)="callServiceQuina_8x8()">Gerar Combinações</ion-button>
   <ion-button *ngIf="fechamento_10x2" size="large" color="primary" (click)="callServiceQuina_10x2()">Gerar Combinações</ion-button>
   <ion-button *ngIf="verificador" size="large" color="primary" (click)="verificarDezenas()">VERIFICAR</ion-button>
-
-  <ion-grid *ngIf="apostas.length > 0">
-    <ion-row>
-      <ion-col size="12">
-          <ion-card class="contador"  *ngFor="let aposta of apostas; index as i">
-            <div id="aposta">
-              <div id="aposta-label">
-                aposta <q></q>:
-                <h5>{{aposta.num_usuario}}</h5>
-                <table>
-                  <tr>
-                    <th id="table-header">Premio</th>
-                    <th id="table-header">Quantidade</th>
-                  </tr>
-                  <tr>
-                    <td id="sena">Quina</td>
-                    <td id="sena">{{aposta.quina}}</td>
-                  </tr>
-                  <tr>
-                    <td id="quina">Quadra</td>
-                    <td id="quina">{{aposta.quadra}}</td>
-                  </tr>
-                  <tr>
-                    <td id="quadra">Terno</td>
-                    <td id="quadra">{{aposta.terno}}</td>
-                  </tr>
-                </table>
-              </div> 
-        
-            </div>
-          </ion-card>
-          <br>
-        
-      </ion-col>
-    </ion-row>
-  </ion-grid>
-
+  
 </ion-content>
