--- a/src/app/lotofacil/lotofacil.page.scss
+++ b/src/app/lotofacil/lotofacil.page.scss
@@ -2,7 +2,7 @@ ion-header {
   height: 100px;
 }
 ion-toolbar {
-    --background: linear-gradient(to left, rgba(255,0,204,1), rgba(255,0,204,0.2)), url('../../assets/lotomania/number.jpg') no-repeat center center / cover;
+  --background: linear-gradient(to left, rgba(249,86,160,0.6), rgba(249,86,160,0.6)), url('../../assets/lotomania/number.jpg') no-repeat center center / cover;
     //--background: url('../../assets/lotomania/beach.jpg') no-repeat center center / cover;
     -webkit-background-size: cover;
     color: white;
@@ -26,7 +26,7 @@ ion-card {
   }
 
 #ion-card-palpite {
-    --background: linear-gradient(#f843956b, #f956a078), url('../../assets/lotomania/sorte-combo.jpg') no-repeat center center / cover;
+  --background: linear-gradient( rgba(249,86,160,0.6), rgba(249,86,160,0.6)), url('../../assets/lotomania/sorte-combo.jpg') no-repeat center center / cover;
     //--background: url('../../assets/lotomania/sorte-combo.jpg') no-repeat center center / cover;
     color: #fff;
     font-size: 15px;
@@ -36,7 +36,10 @@ h6{
     margin-inline-start: 25px;
     margin-top: 40px;
     color: black
-  }
+}
+span {
+  font-family: 'Courier New', Courier, monospace;
+}
 .title-md {
     padding-top: 10px
   }
@@ -44,29 +47,36 @@ h6{
   margin-top: -55px;
 }
 .card {
-    padding-bottom: 9px;
-  }
+  padding-bottom: 9px;
+}
 #valor {
-    color: crimson;
-    font-weight: bold;
-    padding-top: 6px;
-  }
+  color: crimson;
+  font-weight: bold;
+  padding-top: 6px;
+}
 #valor-card {
-    color: crimson;
-    font-weight: bold;
-    padding-top: 15px;
-  }
+  color: crimson;
+  font-weight: bold;
+  padding-top: 15px;
+}
 #dezena {
-    padding-top: 3px;
-    color:white;
-    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif
-  }
+  padding-top: 3px;
+  color:white;
+  font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif
+}
 #apostas {
-    color: black;
-    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif
-  }
+  color: black;
+  font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif
+}
   
 #fixas {
-    color: cyan;
-  }
+  color: cyan;
+}
+#frase {
+  padding-top: 15px;
+  text-align: center;
+  color: white;
+  font-size: 18px;
+}
+
   
