--- a/src/app/lotomania/lotomania.page.html
+++ b/src/app/lotomania/lotomania.page.html
@@ -6,7 +6,7 @@
     <ion-title>
       LOTOMANIA
     </ion-title>
-    <div id="frase">"Siga seus sonhos e ideais e lute enquanto a sorte faz o seu trabalho."</div>
+    <div id="frase">"NADA É, A MENOS QUE NOSSO PENSAMENTO O FAÇA" <span>-Shakespeare</span></div>
   </ion-toolbar>
 </ion-header>
 
