--- a/src/app/mega-sena/mega-sena.page.html
+++ b/src/app/mega-sena/mega-sena.page.html
@@ -1,12 +1,12 @@
 <ion-header>
   <ion-toolbar>
-    <ion-buttons slot="start">
-      <ion-back-button  defaultHref="home"></ion-back-button>
+    <ion-buttons slot="start" (click)="voltar()">
+      <ion-icon size="large" name="arrow-back"></ion-icon>
     </ion-buttons>
     <ion-title>
       MEGA-SENA
     </ion-title>
-    <div id="frase">"Siga seus sonhos e ideais e lute enquanto a sorte faz o seu trabalho."</div>
+    <div id="frase">"SIGA SEUS SONHOS E IDEAIS E LUTE ENQUANTO A SORTE FAZ SEU TRABALHO"</div>
   </ion-toolbar>
 </ion-header>
 
