--- a/src/app/verificador/verificador.page.scss
+++ b/src/app/verificador/verificador.page.scss
@@ -16,10 +16,11 @@ ion-content {
     padding-top: 10px
   }
 .sc-ion-buttons-md-h {
-    margin-top: -49px;
+    margin-top: -30px;
 }
 #frase {
   padding-top: 20px;
-  padding-inline-start: 20px;
-  color: black;
+  text-align: center;
+  color: white;
+  font-size: 20px;
 }
